# clio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CHANGELOG  CITATION.cff  README.md  environment.yaml  mkdocs.yaml  pixi.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  guideline-suggestion.md
.github/workflows/: pr-ci.yml  update-copier-template.yml
docs/: index.md
docs/About/: motivation.md  our_framework.md
docs/Background/: our_framework.md
docs/Developer_guidelines/: getting_started.md  requirements.md
docs/Guidelines/: templates.md
docs/Modules/: modules.md
docs/about/: motivation.md  our_framework.md
docs/clio_tools_API/: data_module.md  index.md
docs/development_guide/: getting_started.md  interfacing.md  requirements.md
resources/shapes/: MNE_admin0.parquet  PRT_admin1.parquet  README.md  ehighways.parquet  eu+.parquet  mne_admin0.parquet  prt_admin1.parquet
src/clio_tools/: __init__.py
src/clio_tools/data_module/: __init__.py  io.py
tests/data_module_test/: docs_test.py  io_test.py
tests/data_module_test/utils/: interface_no_resources.yaml  interface_simple.yaml  interface_wildcard.yaml
