[project]
authors = [
  { name = "clio_tools contributors listed in AUTHORS" },
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "License :: OSI Approved",
  "Topic :: Scientific/Engineering",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.12",
]

description = "Tools and utilities for clio components"
version = "0.1.0"
keywords = ["energy modelling", "workflows", "integration"]
license = {file = "LICENSE"}
name = "clio_tools"
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
changelog = "https://github.com/calliope-project/clio/CHANGELOG"
documentation = "https://clio.readthedocs.io/"
homepage = "https://callio.pe"
issues = "https://github.com/calliope-project/clio/issues"
repository = "https://github.com/calliope-project/clio"
website = "https://github.com/calliope-project/clio/"

# ---
# Dev tooling
# ---
[tool.mypy]
disable_error_code = ["import-untyped"]
files = "src/"

[tool.ruff.format]
exclude = [".*.egg-info", "requirements/**"]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E", "F", "I", "Q", "W", "D", "PT", "UP"]
# line too long
ignore = ["E501"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "D104"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 200
ignore-overlong-task-comments = true

# ---
# Build
# ---
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/clio_tools"]
